resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-21.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BitFieldsTest7 {
  uint16_t b1 : 3;
  uint16_t : 0;
  uint32_t b2 : 3;
};
