resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-3.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BitFieldsTest2 {
  unsigned char b1 : 3;
  unsigned char : 0;
  unsigned char b2 : 6;
  unsigned char b3 : 2;
};
